--- a/download_tutorial.ipynb
+++ b/download_tutorial.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,19 +24,71 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data in the ESGF archive is organised by MIP era, then by experiments, models, variables, etc. Queries to the archive utilise 'facets' to specify the dataset being requested. However, inconsistencies between MIPs mean that the facet names vary from MIP to MIP. Unfortunately, the exact facet names are required for a successful query. To aid in this, the facets for each MIP on the ESGF archive are listed below:\n",
+    "\n",
+    "### CMIP3\n",
+    " -    `model`\n",
+    " -    `ensemble`\n",
+    " -    `experiment`\n",
+    " -    `time_frequency`\n",
+    " -    `variable`\n",
+    "### CMIP5\n",
+    "link: https://esgf-data.dkrz.de/search/cmip5-dkrz/\n",
+    " -    `model`\n",
+    " -    `ensemble`\n",
+    " -    `experiment`\n",
+    " -    `time_frequency`\n",
+    " -    `institute`\n",
+    " -    `cmor_table`\n",
+    " -    `product`\n",
+    " -    `variable`\n",
+    "### CMIP6\n",
+    "link: https://esgf-data.dkrz.de/search/cmip6-dkrz/\n",
+    " -    `activity_drs`\n",
+    " -    `source_id`\n",
+    " -    `member_id`\n",
+    " -    `experiment_id`\n",
+    " -    `frequency`\n",
+    " -    `institution_id`\n",
+    " -    `grid_label`\n",
+    " -    `table_id`\n",
+    " -    `variable`\n",
+    "### CORDEX\n",
+    "link: https://esgf-data.dkrz.de/search/cordex-dkrz/\n",
+    " -    `rcm_name`\n",
+    " -    `driving_model`\n",
+    " -    `domain`\n",
+    " -    `ensemble`\n",
+    " -    `experiment`\n",
+    " -    `time_frequency`\n",
+    " -    `institute`\n",
+    " -    `product`\n",
+    " -    `variable`\n",
+    "### obs4MIPs\n",
+    "link: https://esgf-data.dkrz.de/search/obs4mips-dkrz/\n",
+    " -    `source_id`\n",
+    " -    `time_frequency`\n",
+    " -    `institute`\n",
+    " -    `variable`"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define your query\n",
+    "# define your query, eg:\n",
     "query = {\n",
-    "    'project': 'CORDEX',\n",
-    "    'domain': 'EUR-11',\n",
-    "    'experiment': 'rcp85',\n",
+    "    'project': 'CMIP6',\n",
+    "    'activity_drs': 'PMIP',\n",
+    "    'experiment_id': 'midPliocene-eoi400',\n",
     "    'variable': 'tas',\n",
-    "    'time_frequency': 'mon',\n",
-    "    'ensemble': 'r1i1p1'\n",
+    "    'frequency': 'mon'\n",
     "}\n",
     "\n",
     "# ensure the following are saved as environment variables\n",
@@ -47,16 +99,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "46"
+       "18"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +131,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,21 +147,22 @@
     "sslcontext.load_verify_locations(capath=lm.esgf_certs_dir)\n",
     "sslcontext.load_cert_chain(lm.esgf_credentials)\n",
     "\n",
+    "# check if logged in\n",
     "lm.is_logged_on()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'cordex.output.EUR-11.CLMcom.MPI-M-MPI-ESM-LR.rcp85.r1i1p1.CCLM4-8-17.v1.mon.tas.v20140515|esgf1.dkrz.de'"
+       "'CMIP6.PMIP.NASA-GISS.GISS-E2-1-G.midPliocene-eoi400.r1i1p1f1.Amon.tas.gn.v20190626|esgf3.dkrz.de'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,16 +176,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'http://esgf1.dkrz.de/thredds/fileServer/cordex/cordex/output/EUR-11/CLMcom/MPI-M-MPI-ESM-LR/rcp85/r1i1p1/CLMcom-CCLM4-8-17/v1/mon/tas/v20140515/tas_EUR-11_MPI-M-MPI-ESM-LR_rcp85_r1i1p1_CLMcom-CCLM4-8-17_v1_mon_200601-201012.nc'"
+       "'http://esgf3.dkrz.de/thredds/fileServer/cmip6/PMIP/IPSL/IPSL-CM6A-LR/midPliocene-eoi400/r1i1p1f1/Emon/evspsblpot/gr/v20190118/evspsblpot_Emon_IPSL-CM6A-LR_midPliocene-eoi400_r1i1p1f1_gr_185001-204912.nc'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,20 +199,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n"
+      "downloading 1 of 46: cordex.output.EUR-11.CLMcom.MPI-M-MPI-ESM-LR.rcp85.r1i1p1.CCLM4-8-17.v1.mon.tas.v20140515|esgf1.dkrz.de \n",
+      "successfully downloaded 0 of 46 datasets\n"
      ]
     }
    ],
    "source": [
     "# call download_ensemble on the context generated by your query\n",
-    "downloads = dl.download_ensemble(context, DATA_PATH, ssl=sslcontext, verbose=True)"
+    "downloads = dl.download_ensemble(context, ssl=sslcontext, local_path=DATA_PATH)"
    ]
   },
   {
@@ -185,7 +239,7 @@
     }
    ],
    "source": [
-    "# or make multiple queries at once\n",
+    "# or make multiple queries at once, eg:\n",
     "\n",
     "queries = {\n",
     "    'project': ['CORDEX'],\n",
