show some of the Dataset class functionality

--- a/explore.ipynb
+++ b/explore.ipynb
@@ -2,19 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import ssl\n",
     "from pyesgf.logon import LogonManager\n",
-    "from pyesgf.search import SearchConnection"
+    "from pyesgf.search import SearchConnection\n",
+    "\n",
+    "# local imports\n",
+    "from esgf_download.classes import Dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +26,7 @@
        "True"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,10 +58,10 @@
     {
      "data": {
       "text/plain": [
-       "61"
+       "0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,118 +72,97 @@
     "    'project': 'CMIP6',\n",
     "    'activity_drs': 'ScenarioMIP',\n",
     "    'experiment_id': 'ssp534-over',\n",
-    "    'variable': 'tas',\n",
+    "    'source_id': 'EC-Earth3-Veg',\n",
+    "    'variable': 'thetao',\n",
     "    'frequency': 'mon',\n",
+    "    #'variant_label': 'r1i1p1f2',\n",
+    "    #'table_id': 'Omon',\n",
     "}\n",
     "\n",
     "# check ESGF for number of datasets that satisfy query\n",
-    "conn = SearchConnection('http://esgf-data.dkrz.de/esg-search', distrib=True)\n",
+    "#search_node = 'http://esgf-data.dkrz.de/esg-search'\n",
+    "search_node = 'http://esgf-node.ipsl.upmc.fr/esg-search'\n",
+    "#search_node = 'https://esgf.ceda.ac.uk/esg-search'\n",
+    "conn = SearchConnection(search_node, distrib=True)\n",
     "context = conn.new_context(**query, facets=query.keys())\n",
     "context.hit_count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CMIP6.ScenarioMIP.NCC.NorESM2-LM.ssp534-over.r1i1p1f1.Amon.tas.gn.v20210811|esgf.ceda.ac.uk\n",
-      "CMIP6.ScenarioMIP.MRI.MRI-ESM2-0.ssp534-over.r1i1p1f1.Amon.tas.gn.v20190222|esgf.ceda.ac.uk\n",
-      "CMIP6.ScenarioMIP.MRI.MRI-ESM2-0.ssp534-over.r1i1p1f1.Amon.tas.gn.v20191108|esgf.ceda.ac.uk\n",
-      "CMIP6.ScenarioMIP.NCAR.CESM2-WACCM.ssp534-over.r1i1p1f1.Amon.tas.gn.v20200701|esgf.ceda.ac.uk\n",
-      "CMIP6.ScenarioMIP.NCAR.CESM2-WACCM.ssp534-over.r2i1p1f1.Amon.tas.gn.v20200211|esgf.ceda.ac.uk\n",
-      "CMIP6.ScenarioMIP.MOHC.UKESM1-0-LL.ssp534-over.r8i1p1f2.Amon.tas.gn.v20191104|esgf.ceda.ac.uk\n",
-      "CMIP6.ScenarioMIP.EC-Earth-Consortium.EC-Earth3.ssp534-over.r101i1p1f1.Amon.tas.gr.v20200412|esgf.ceda.ac.uk\n",
-      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-ESM2-1.ssp534-over.r2i1p1f2.Amon.tas.gr.v20190410|esgf.ceda.ac.uk\n",
-      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-ESM2-1.ssp534-over.r3i1p1f2.Amon.tas.gr.v20190410|esgf.ceda.ac.uk\n",
-      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-ESM2-1.ssp534-over.r4i1p1f2.Amon.tas.gr.v20190410|esgf.ceda.ac.uk\n",
-      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-ESM2-1.ssp534-over.r5i1p1f2.Amon.tas.gr.v20190410|esgf.ceda.ac.uk\n",
-      "CMIP6.ScenarioMIP.CCCma.CanESM5.ssp534-over.r1i1p1f1.Amon.tas.gn.v20190306|esgf.ceda.ac.uk\n",
-      "CMIP6.ScenarioMIP.CCCma.CanESM5.ssp534-over.r1i1p1f1.Amon.tas.gn.v20190429|esgf.ceda.ac.uk\n",
-      "CMIP6.ScenarioMIP.CCCma.CanESM5.ssp534-over.r2i1p1f1.Amon.tas.gn.v20190306|esgf.ceda.ac.uk\n",
-      "CMIP6.ScenarioMIP.CCCma.CanESM5.ssp534-over.r2i1p1f1.Amon.tas.gn.v20190429|esgf.ceda.ac.uk\n",
-      "CMIP6.ScenarioMIP.CCCma.CanESM5.ssp534-over.r3i1p1f1.Amon.tas.gn.v20190306|esgf.ceda.ac.uk\n",
-      "CMIP6.ScenarioMIP.CCCma.CanESM5.ssp534-over.r3i1p1f1.Amon.tas.gn.v20190429|esgf.ceda.ac.uk\n",
-      "CMIP6.ScenarioMIP.CCCma.CanESM5.ssp534-over.r4i1p1f1.Amon.tas.gn.v20190306|esgf.ceda.ac.uk\n",
-      "CMIP6.ScenarioMIP.CCCma.CanESM5.ssp534-over.r4i1p1f1.Amon.tas.gn.v20190429|esgf.ceda.ac.uk\n",
-      "CMIP6.ScenarioMIP.CCCma.CanESM5.ssp534-over.r5i1p1f1.Amon.tas.gn.v20190306|esgf.ceda.ac.uk\n",
-      "CMIP6.ScenarioMIP.CCCma.CanESM5.ssp534-over.r5i1p1f1.Amon.tas.gn.v20190429|esgf.ceda.ac.uk\n",
-      "CMIP6.ScenarioMIP.CMCC.CMCC-ESM2.ssp534-over.r1i1p1f1.Amon.tas.gn.v20210409|esgf.ceda.ac.uk\n",
-      "CMIP6.ScenarioMIP.CAS.FGOALS-g3.ssp534-over.r1i1p1f1.Amon.tas.gn.v20200410|esgf.ceda.ac.uk\n",
-      "CMIP6.ScenarioMIP.IPSL.IPSL-CM6A-LR.ssp534-over.r1i1p1f1.Amon.tas.gr.v20190909|esgf.ceda.ac.uk\n",
-      "CMIP6.ScenarioMIP.MIROC.MIROC-ES2L.ssp534-over.r1i1p1f2.Amon.tas.gn.v20201014|esgf.ceda.ac.uk\n",
-      "CMIP6.ScenarioMIP.MIROC.MIROC-ES2L.ssp534-over.r1i1p1f2.Amon.tas.gn.v20220314|esgf.ceda.ac.uk\n",
-      "CMIP6.ScenarioMIP.MIROC.MIROC6.ssp534-over.r1i1p1f1.Amon.tas.gn.v20190807|esgf.ceda.ac.uk\n",
-      "CMIP6.ScenarioMIP.MOHC.UKESM1-0-LL.ssp534-over.r1i1p1f2.Amon.tas.gn.v20190830|esgf.ceda.ac.uk\n",
-      "CMIP6.ScenarioMIP.MOHC.UKESM1-0-LL.ssp534-over.r2i1p1f2.Amon.tas.gn.v20190830|esgf.ceda.ac.uk\n",
-      "CMIP6.ScenarioMIP.MOHC.UKESM1-0-LL.ssp534-over.r3i1p1f2.Amon.tas.gn.v20190830|esgf.ceda.ac.uk\n",
-      "CMIP6.ScenarioMIP.MOHC.UKESM1-0-LL.ssp534-over.r4i1p1f2.Amon.tas.gn.v20190903|esgf.ceda.ac.uk\n",
-      "CMIP6.ScenarioMIP.MOHC.UKESM1-0-LL.ssp534-over.r4i1p1f2.Amon.tas.gn.v20210205|esgf.ceda.ac.uk\n",
-      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-ESM2-1.ssp534-over.r5i1p1f2.Amon.tas.gr.v20190410|esg1.umr-cnrm.fr\n",
-      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-ESM2-1.ssp534-over.r3i1p1f2.Amon.tas.gr.v20190410|esg1.umr-cnrm.fr\n",
-      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-ESM2-1.ssp534-over.r4i1p1f2.Amon.tas.gr.v20190410|esg1.umr-cnrm.fr\n",
-      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-ESM2-1.ssp534-over.r2i1p1f2.Amon.tas.gr.v20190410|esg1.umr-cnrm.fr\n",
-      "CMIP6.ScenarioMIP.IPSL.IPSL-CM6A-LR.ssp534-over.r1i1p1f1.Amon.tas.gr.v20190909|vesg.ipsl.upmc.fr\n",
-      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-ESM2-1.ssp534-over.r1i1p1f2.Amon.tas.gr.v20190328|esg1.umr-cnrm.fr\n",
-      "CMIP6.ScenarioMIP.NCAR.CESM2-WACCM.ssp534-over.r1i1p1f1.Amon.tas.gn.v20200701|esgf3.dkrz.de\n",
-      "CMIP6.ScenarioMIP.MOHC.UKESM1-0-LL.ssp534-over.r4i1p1f2.Amon.tas.gn.v20190903|esgf3.dkrz.de\n",
-      "CMIP6.ScenarioMIP.MIROC.MIROC-ES2L.ssp534-over.r1i1p1f2.Amon.tas.gn.v20201014|esgf3.dkrz.de\n",
-      "CMIP6.ScenarioMIP.CCCma.CanESM5.ssp534-over.r4i1p1f1.Amon.tas.gn.v20190429|esgf3.dkrz.de\n",
-      "CMIP6.ScenarioMIP.CCCma.CanESM5.ssp534-over.r1i1p1f1.Amon.tas.gn.v20190429|esgf3.dkrz.de\n",
-      "CMIP6.ScenarioMIP.CCCma.CanESM5.ssp534-over.r3i1p1f1.Amon.tas.gn.v20190429|esgf3.dkrz.de\n",
-      "CMIP6.ScenarioMIP.CCCma.CanESM5.ssp534-over.r5i1p1f1.Amon.tas.gn.v20190429|esgf3.dkrz.de\n",
-      "CMIP6.ScenarioMIP.CCCma.CanESM5.ssp534-over.r2i1p1f1.Amon.tas.gn.v20190429|esgf3.dkrz.de\n",
-      "CMIP6.ScenarioMIP.CAS.FGOALS-g3.ssp534-over.r1i1p1f1.Amon.tas.gn.v20200410|esgf3.dkrz.de\n",
-      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-ESM2-1.ssp534-over.r2i1p1f2.Amon.tas.gr.v20190410|esgf3.dkrz.de\n",
-      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-ESM2-1.ssp534-over.r4i1p1f2.Amon.tas.gr.v20190410|esgf3.dkrz.de\n",
-      "CMIP6.ScenarioMIP.IPSL.IPSL-CM6A-LR.ssp534-over.r1i1p1f1.Amon.tas.gr.v20190909|esgf3.dkrz.de\n",
-      "CMIP6.ScenarioMIP.MIROC.MIROC6.ssp534-over.r1i1p1f1.Amon.tas.gn.v20190807|esgf3.dkrz.de\n",
-      "CMIP6.ScenarioMIP.MRI.MRI-ESM2-0.ssp534-over.r1i1p1f1.Amon.tas.gn.v20191108|esgf3.dkrz.de\n",
-      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-ESM2-1.ssp534-over.r3i1p1f2.Amon.tas.gr.v20190410|esgf3.dkrz.de\n",
-      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-ESM2-1.ssp534-over.r5i1p1f2.Amon.tas.gr.v20190410|esgf3.dkrz.de\n",
-      "CMIP6.ScenarioMIP.MOHC.UKESM1-0-LL.ssp534-over.r2i1p1f2.Amon.tas.gn.v20190830|esgf3.dkrz.de\n",
-      "CMIP6.ScenarioMIP.MOHC.UKESM1-0-LL.ssp534-over.r1i1p1f2.Amon.tas.gn.v20190830|esgf3.dkrz.de\n",
-      "CMIP6.ScenarioMIP.MOHC.UKESM1-0-LL.ssp534-over.r3i1p1f2.Amon.tas.gn.v20190830|esgf3.dkrz.de\n",
-      "CMIP6.ScenarioMIP.MOHC.UKESM1-0-LL.ssp534-over.r8i1p1f2.Amon.tas.gn.v20191104|esgf3.dkrz.de\n",
-      "CMIP6.ScenarioMIP.EC-Earth-Consortium.EC-Earth3.ssp534-over.r101i1p1f1.Amon.tas.gr.v20200412|esgf3.dkrz.de\n",
-      "CMIP6.ScenarioMIP.CMCC.CMCC-ESM2.ssp534-over.r1i1p1f1.Amon.tas.gn.v20210409|esgf-node2.cmcc.it\n",
-      "CMIP6.ScenarioMIP.AWI.AWI-ESM-1-REcoM.ssp534-over.r1i1p1f1.Amon.tas.gn.v20230314|esgf3.dkrz.de\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# generate results and check datasets to verify all is working as expected\n",
-    "results = context.search()\n",
-    "for result in results:\n",
-    "    print(result.dataset_id)"
+    "results = context.search()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://esgf3.dkrz.de/thredds/fileServer/cmip6/ScenarioMIP/AWI/AWI-ESM-1-REcoM/ssp534-over/r1i1p1f1/Amon/tas/gn/v20230314/tas_Amon_AWI-ESM-1-REcoM_ssp534-over_r1i1p1f1_gn_204001-205412.nc\n",
-      "https://esgf3.dkrz.de/thredds/fileServer/cmip6/ScenarioMIP/AWI/AWI-ESM-1-REcoM/ssp534-over/r1i1p1f1/Amon/tas/gn/v20230314/tas_Amon_AWI-ESM-1-REcoM_ssp534-over_r1i1p1f1_gn_205501-207412.nc\n",
-      "https://esgf3.dkrz.de/thredds/fileServer/cmip6/ScenarioMIP/AWI/AWI-ESM-1-REcoM/ssp534-over/r1i1p1f1/Amon/tas/gn/v20230314/tas_Amon_AWI-ESM-1-REcoM_ssp534-over_r1i1p1f1_gn_207501-209412.nc\n",
-      "https://esgf3.dkrz.de/thredds/fileServer/cmip6/ScenarioMIP/AWI/AWI-ESM-1-REcoM/ssp534-over/r1i1p1f1/Amon/tas/gn/v20230314/tas_Amon_AWI-ESM-1-REcoM_ssp534-over_r1i1p1f1_gn_209501-210012.nc\n"
+      "CMIP6.ScenarioMIP.EC-Earth-Consortium.EC-Earth3-Veg.ssp534-over.r1i1p1f1.Amon.tas.gr.v20221112|esg-dn1.nsc.liu.se\n"
      ]
     }
    ],
    "source": [
-    "# get most recent dataset and print download urls\n",
-    "latest = list(results)[-1]\n",
-    "files = latest.file_context().search(ignore_facet_check=True)\n",
-    "for file in files:\n",
-    "    print(file.download_url)"
+    "for result in results:\n",
+    "    ds = Dataset(result)\n",
+    "    if ds.end_date in ['230012', '229912']:\n",
+    "        print(ds.dataset_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models = ['MRI-ESM2-0', 'CESM2-WACCM', 'CanESM5', 'IPSL-CM6A-LR', 'CNRM-ESM2-1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['204001', '204101', '204201', '204301', '204401', '204501', '204601', '204701', '204801', '204901', '205001', '205101', '205201', '205301', '205401', '205501', '205601', '205701', '205801', '205901', '206001', '206101', '206201', '206301', '206401', '206501', '206601', '206701', '206801', '206901', '207001', '207101', '207201', '207301', '207401', '207501', '207601', '207701', '207801', '207901', '208001', '208101', '208201', '208301', '208401', '208501', '208601', '208701', '208801', '208901', '209001', '209101', '209201', '209301', '209401', '209501', '209601', '209701', '209801', '209901', '210001', '210101', '210201', '210301', '210401', '210501', '210601', '210701', '210801', '210901', '211001', '211101', '211201', '211301', '211401', '211501', '211601', '211701', '211801', '211901', '212001', '212101', '212201', '212301', '212401', '212501', '212601', '212701', '212801', '212901', '213001', '213101', '213201', '213301', '213401', '213501', '213601', '213701', '213801', '213901', '214001', '214101', '214201', '214301', '214401', '214501', '214601', '214701', '214801', '214901', '215001', '215101', '215201', '215301', '215401', '215501', '215601', '215701', '215801', '215901', '216001', '216101', '216201', '216301', '216401', '216501', '216601', '216701', '216801', '216901', '217001', '217101', '217201', '217301', '217401', '217501', '217601', '217701', '217801', '217901', '218001', '218101', '218201', '218301', '218401', '218501', '218601', '218701', '218801', '218901', '219001', '219101', '219201', '219301', '219401', '219501', '219601', '219701', '219801', '219901', '220001', '220101', '220201', '220301', '220401', '220501', '220601', '220701', '220801', '220901', '221001', '221101', '221201', '221301', '221401', '221501', '221601', '221701', '221801', '221901', '222001', '222101', '222201', '222301', '222401', '222501', '222601', '222701', '222801', '222901', '223001', '223101', '223201', '223301', '223401', '223501', '223601', '223701', '223801', '223901', '224001', '224101', '224201', '224301', '224401', '224501', '224601', '224701', '224801', '224901', '225001', '225101', '225201', '225301', '225401', '225501', '225601', '225701', '225801', '225901', '226001', '226101', '226201', '226301', '226401', '226501', '226601', '226701', '226801', '226901', '227001', '227101', '227201', '227301', '227401', '227501', '227601', '227701', '227801', '227901', '228001', '228101', '228201', '228301', '228401', '228501', '228601', '228701', '228801', '228901', '229001', '229101', '229201', '229301', '229401', '229501', '229601', '229701', '229801', '229901', '230001']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([file.start_date for file in ds.files])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "can't use starred expression here (3259988686.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[58], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    *test1\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't use starred expression here\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = {'a': 1, 'b': 2}\n",
+    "test2 = {'c': 3}\n",
+    "\n",
+    "**test1"
    ]
   },
   {
